pom refactored, test fixed